# PyArchitect

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  ddd-config-simple.yaml  ddd-config.yaml  py_architect_example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code-quality.yaml  publish.yaml  test.yaml
examples/: ddd-config-advanced-example.yaml  ddd-config-advanced.yaml  ddd-config-empty-dirs-example.yaml  ddd-config-emtry-dirs.yaml  ddd-config-minimal-example.yaml  ddd-config-minimal.yaml  ddd-config-simple-example.yaml  ddd-config-simple.yaml  ddd-config-standard-example.yaml  ddd-config-standard.yaml
src/: __init__.py  exceptions.py  generator.py  generator_helper.py  main.py  parser.py
src/core/: __init__.py  constants.py  dependecies.py  dependencies.py  exceptions.py  parser.py  template_engine.py  utils.py
src/generators/: __init__.py  application.py  base.py  domain.py  infrastructure.py  interface.py  layer_generator.py  project.py  project_generator.py  utils.py
src/generators/layer_generators/: __init__.py  application.py  base_layer_generator.py  domain.py  infrastructure.py  interface.py
src/generators/presets/: __init__.py  advanced.py  base.py  simple.py  standard.py
src/preview/: base_render.py  collector.py  objects.py  tree_render.py
src/preview/renderers/: ascii_render.py  base_render.py  tree_render.py
src/schemas/: __init__.py  config_schema.py
src/templates/: __init__.py  base_template.py.jinja  engine.py  init.py.jinja  multi_component_template.py.jinja  structure.md.jinja
src/templates/config_templates/: ddd-config-advanced.yaml  ddd-config-simple.yaml  ddd-config-standard.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_layer_generator.py  test_parser.py  test_project_generator.py  test_template_engine.py  test_utils.py
tests/fixtures/: ddd-config-advanced.yaml  ddd-config-not-valid.yaml  ddd-config-standard.yaml  ddd-config.yaml
